--- a/style.css
+++ b/style.css
@@ -1,94 +1,106 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.main{
-    width:100%;
-    background: linear-gradient(to top,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url("1.jpg");
-background-position: center;
-background-size: cover;
-height:100vh;
+.main {
+    width: 100%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url("1.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
 
 }
-.navbar{
-    width:1200px;
-    height:75px;
-    margin:auto;
+
+.navbar {
+    width: 1200px;
+    height: 75px;
+    margin: auto;
 
 }
-.icon{
-    width:200px;
-    float:left;
-    height:70px;
+
+.icon {
+    width: 200px;
+    float: left;
+    height: 70px;
 }
-.logo{
-    color:orange;
+
+.logo {
+    color: orange;
     font-size: 35px;
     font-family: Arial;
-    padding-left:20px;
-    float:left;
-    padding-top:10px;
+    padding-left: 20px;
+    float: left;
+    padding-top: 10px;
     margin-top: 5px;
 }
-.menu{
-    width:400px;
-    float:left;
-    height:70px;
+
+.menu {
+    width: 400px;
+    float: left;
+    height: 70px;
 
 
 }
-ul{
-float: left;
-display: flex;
-justify-items: center;
-align-items: center;
+
+ul {
+    float: left;
+    display: flex;
+    justify-items: center;
+    align-items: center;
 
 }
-ul li{
+
+ul li {
     list-style: none;
     margin-left: 62px;
     margin-top: 27px;
-    font-size:14px;
+    font-size: 14px;
 
 }
-ul li a{
-    color:azure;
+
+ul li a {
+    color: azure;
     text-decoration: none;
-    font-weight:bold;
+    font-weight: bold;
     font-family: Arial;
-    transition:  0.4s ease-in-out;
+    transition: 0.4s ease-in-out;
 }
-ul li a:hover{
-    color:orange;
+
+ul li a:hover {
+    color: orange;
 
 }
-.search{
-    width:330px;
-    float:left;
-    margin-left: 270px;;
+
+.search {
+    width: 330px;
+    float: left;
+    margin-left: 270px;
+    ;
 }
-.srch{
+
+.srch {
     font-family: 'Times New Roman';
-    width:200px;
-    height:40px;
+    width: 200px;
+    height: 40px;
     background: transparent;
-    border:1px solid orange;
-    color:white;
+    border: 1px solid orange;
+    color: white;
     border-right: none;
     font-size: 16px;
-    float:left;
+    float: left;
     padding: 10px;
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
 }
-.button{
-    width:100px;
-    height:40px;
+
+.button {
+    width: 100px;
+    height: 40px;
     background: orange;
     border: 2px solid orangered;
-    margin-top:13px;
-    color:white;
+    margin-top: 13px;
+    color: white;
     font-size: 15px;
     border-bottom-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -97,39 +109,52 @@ ul li a:hover{
 
 
 }
-.button:hover{
-    color:white;
+
+.button:hover {
+    color: white;
 }
-.button:focus{
-    outline:none;
+
+.button:focus {
+    outline: none;
 }
-.content{
-    width:1200px;
-    height:auto;
-    margin:auto;
-    color:white;
-    position:relative;
+
+.content {
+    width: 1200px;
+    height: auto;
+    margin: auto;
+    color: white;
+    position: relative;
 }
-.content.paragraph{
+
+.content.paragraph {
     padding: 20px;
     padding-bottom: 25px;
     font-family: Arial;
     letter-spacing: 1.2px;
 }
-.cntent.h1{
+
+.cntent.h1 {
     font-family: 'Courier New';
     font-size: 50px;
     padding-left: 20px;
-    margin-top:9%;
-    
+    margin-top: 9%;
+
 }
-.content.cn{
-    width:160px;
-    height:40px;
+
+.content.cn {
+    width: 160px;
+    height: 40px;
     background: orange;
     border: none;
     margin-bottom: 10px;
     margin-left: 20px;
     border-radius: 10px;
     cursor: pointer;
+}
+
+
+@media only screen and (max-width:700px) {
+    .main {
+        background-color: red;
+    }
 }
